force-app/main/default/objects/Branch__c/fields/BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>BranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BranchNumber</label>
    <length>32</length>
    <type>Text</type>
</CustomField>