force-app/main/default/objects/Branch__c/fields/EmployeePointOfContact__c.field-meta.xml
<CustomField>
    <fullName>EmployeePointOfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Point Of Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>